--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>meower</title>
-    <link rel="shortcut icon" href="images/svg/thing.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="script.js"></script>
   </head>
