--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <br>
     <div class="content">
       <h2 style="color:orange;">Welcome to Meower!</h2>
-      <!--https://medium.com/swlh/javascript-how-to-create-a-like-button-3716c33b1879-->
-      
+        Meower is a cloud-based social media. Its goal is to provide a state-of-the-art social media for everyone.
+      <img src="screenshot.png">
       <br>
       
       <script>
