--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="content">
       <h2 style="color:orange;">Welcome to Meower!</h2>
        <div class="meower-info"> Meower is a cloud-based social media. Its goal is to provide a state-of-the-art social media for everyone. </div>
-      <img class="meower_gui" src="assets/screenshot.png">
+      <div class="color_orange"><img class="meower_gui" src="assets/screenshot.png">
       <br>
       
       <script>
