--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <div class="content">
       <h2 style="color:orange;">404</h2>
        <div class="meower-info"> It seems the page you're looking for doesn't exist. <br><i>Click the home button to return.</i></div>
-      <div class="color_orange"><img class="meower_gui" src="assets/screenshot.png">
+      <div class="color_orange">
       <br>
       
       <script>
