--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div id="scratch" class="logo">meower <a id="scratch" class="link" href="index.html">home</a> <a id="scratch" class="link" href="blog.html">development</a> <a id="scratch" class="link" href="media.html">media</a></div>
+    <div id="scratch" class="logo" href="index.html">meower <a id="scratch" class="link" href="index.html">home</a> <a id="scratch" class="link" href="blog.html">development</a> <a id="scratch" class="link" href="media.html">media</a></div>
     <br>
     <div class="content">
       <h2 style="color:orange;">Welcome to Meower!</h2>
