--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Awesome Search Box</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- searchbar from: https://www.w3docs.com/snippets/css/how-to-create-search-boxes.html (will add functionality later -->
     <style>
       .search-box {
         position: absolute;
