--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <style>
       .search-box {
         position: absolute;
-        top: 4%;
-        left: 35%;
+        top: 35px;
+        left: 700px;
         transform: translate(-50%, -50%);
         background: #fff;
         height: 40px;
