--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width">
     <title>meower</title>
     <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="script.js"></script>
+    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <script src="/script.js"></script>
   </head>
   <body>
     <div id="scratch" class="logo">meower <a id="scratch" class="link" href="index.html">home</a> <a id="scratch" class="link" href="blog.html">development</a> <a id="scratch" class="link" href="media.html">media</a></div>
