--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div id="scratch" class="logo" href="index.html">meower <a id="scratch" class="link" href="index.html">home</a> <a id="scratch" class="link" href="blog.html">development</a> <a id="scratch" class="link" href="media.html">media</a></div>
+    <div id="scratch" class="logo" href="index.html">meower <a id="scratch" class="link" href="index.html">home</a> <a id="scratch" class="link" href="blog.html">meower</a> <a id="scratch" class="link" href="meower.org/meower">media</a></div>
     <div class="search-box">
       <input type="text" name="name" class="search-txt" placeholder="Type to search" />
       <a class="search-btn" href="#">
