--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <div class="content">
       <h2 style="color:orange;">Welcome to Meower!</h2>
        <div class="meower-info"> Meower is a cloud-based social media. Its goal is to provide a state-of-the-art social media for everyone. </div>
+      <img src="assets/meower hub.png"><img>
       <div class="color_orange"><img class="meower_gui" src="assets/screenshot.png">
       <br>
     </div>
