--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>meower</title>
     <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <style>#grad {
+  background-image: linear-gradient(white, rgba(255,216,192,255));
+}</style>
   </head>
   <body>
     <div id="scratch" class="logo" href="index.html">meower <a id="scratch" class="link" href="index.html">home</a> <a id="scratch" class="link" href="https://www.meower.org/Meower">meower</a></div>
