--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <div class="meower-info">
 Meower is a cloud-based social media. Its goal is to provide a state-of-the-art social media for everyone.
 Where do you want to go? </div>
-      <img class="hub" src="assets/meower hub.png" width="100%" height="100%">
+      <img class="hub" src="assets/meower (with wiki)3.png" width="100%" height="100%">
       <br>
     </div>
   </body>
