--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="scratch" class="logo" href="index.html">meower <a id="scratch" class="link" href="index.html">home</a> <a id="scratch" class="link" href="https://www.meower.org/Meower">meower</a></div>
+    <div id="scratch" class="logo" href="index.html">meower <a id="scratch" class="link" href="index.html">home</a> <a id="scratch" class="link" href="https://www.meower.org/Meower">meower</a> <a id="wiki" class="link" href="https://meower.miraheze.org/wiki">meower</a></div>
     <br>
     <div class="content">
       <h2 style="color:orange;">Welcome to Meower!</h2>
