--- a/404.html
+++ b/404.html
@@ -6,21 +6,13 @@
     <title>meower</title>
     <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
     <link href="/style.css" rel="stylesheet" type="text/css" />
-    <script src="/script.js"></script>
   </head>
   <body>
-    <div id="scratch" class="logo">meower <a id="scratch" class="link" href="/">home</a> <a id="scratch" class="link" href="/blog.html">development</a> <a id="scratch" class="link" href="/media.html">media</a></div>
+    <div id="scratch" class="logo" href="/">meower <a id="scratch" class="link" href="/">home</a> <a id="scratch" class="link" href="https://app.meower.org">meower</a> <a id="scratch" class="link" href="https://wiki.meower.org">wikimeower</a></div>
     <br>
     <div class="content">
       <h2 style="color:orange;">404</h2>
        <div class="meower-info"> It seems the page you're looking for doesn't exist. <br><i>Click the home button to return.</i></div>
-      <div class="color_orange">
-      <br>
-      
-      <script>
-        
-      </script>
-   
     </div>
   </body>
 </html>
