--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="scratch" class="logo" href="index.html">meower <a id="scratch" class="link" href="index.html">home</a> <a id="scratch" class="link" href="https://www.meower.org/Meower">meower</a> <a id="scratch" class="link" href="https://meower.miraheze.org/wiki">wikimeower</a></div>
+    <div id="scratch" class="logo" href="/">meower <a id="scratch" class="link" href="/">home</a> <a id="scratch" class="link" href="https://app.meower.org">meower</a> <a id="scratch" class="link" href="https://wiki.meower.org">wikimeower</a></div>
     <br>
     <div class="content">
       <h2 style="color:orange;">Welcome to Meower!</h2>
@@ -16,7 +16,6 @@
 Meower is a cloud-based social media. Its goal is to provide a state-of-the-art social media for everyone.
 Where do you want to go? </div>
       <img class="hub" src="assets/meower (with wiki)3.png" width="100%" height="100%">
-      <br>
     </div>
   </body>
 </html>
