--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
        <div class="meower-info">
 Meower is a cloud-based social media. Its goal is to provide a state-of-the-art social media for everyone.
 Where do you want to go? </div>
-      <img class="hub" src="assets/meower (with wiki)3.png" width="100%" height="100%">
+       <h2 style="color:orange;">Welcome to Meower!</h2>
+       <div class="meower-info">
+Meower is a cloud-based social media. Its goal is to provide a state-of-the-art social media for everyone.
+Where do you want to go? </div>
+       <h2 style="color:orange;">Welcome to Meower!</h2>
+       <div class="meower-info">
+Meower is a cloud-based social media. Its goal is to provide a state-of-the-art social media for everyone.
+Where do you want to go? </div>
+       <h2 style="color:orange;">Welcome to Meower!</h2>
+       <div class="meower-info">
+Meower is a cloud-based social media. Its goal is to provide a state-of-the-art social media for everyone.
+Where do you want to go? </div>
     </div>
   </body>
 </html>
