--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id="scratch" class="logo" href="/">meower <a id="scratch" class="link" href="/">home</a> <a id="scratch" class="link" href="https://app.meower.org">meower</a> <a id="scratch" class="link" href="https://wiki.meower.org">wikimeower</a></div>
     <br>
     <div class="content">
+      <div class="row">
+  <div class="column" style="background-color:#fff;">
       <h2 style="color:orange;">Welcome to Meower!</h2>
        <div class="meower-info">
 Meower is a cloud-based social media. Its goal is to provide a state-of-the-art social media for everyone.
@@ -28,6 +30,11 @@ Where do you want to go? </div>
        <div class="meower-info">
 Meower is a cloud-based social media. Its goal is to provide a state-of-the-art social media for everyone.
 Where do you want to go? </div>
+    </div>
+  <div class="column" style="background-color:#fff;">
+    <p></p>
+  </div>
+</div>
     </div>
   </body>
 </html>
