--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ Where do you want to go? </div>
     </div>
   <div class="column" style="background-color:#fff;">
     <p></p>
+        <link rel="screenshot" href="screenshot.png" type="image/x-icon">
   </div>
 </div>
     </div>
