--- a/legal.html
+++ b/legal.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="scratch" class="logo" href="/">meower <a id="scratch" class="link" href="/">home</a> <a id="scratch" class="link" href="https://app.meower.org">meower</a> <a id="scratch" class="link" href="https://wiki.meower.org">wikimeower</a></div>
+    <div id="scratch" class="logo" href="/">meower <a id="scratch" class="link" href="/">home</a> <a id="scratch" class="link" href="https://app.meower.org">meower</a> <a id="scratch" class="link" href="https://wiki.meower.org">wikimeower</a> <a id="scratch" class="link" href="https://beta.meower.org">beta meower</a></div>
     <br>
     <div class="content" style="width:50%;margin-left:auto;margin-right:auto;text-align:center;">
         <h2 style="color:orange;">Meower Terms of Use and Privacy Policy</h2>
