Added beta.meower.org link
I can do this all at the same time with Visual Studio Code, but, no.

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="scratch" class="logo" href="/">meower <a id="scratch" class="link" href="/">home</a> <a id="scratch" class="link" href="https://app.meower.org">meower</a> <a id="scratch" class="link" href="https://wiki.meower.org">wikimeower</a></div>
+    <div id="scratch" class="logo" href="/">meower <a id="scratch" class="link" href="/">home</a> <a id="scratch" class="link" href="https://app.meower.org">meower</a> <a id="scratch" class="link" href="https://wiki.meower.org">wikimeower</a> <a id="scratch" class="link" href="https://beta.meower.org">beta meower</a></div>
     <br>
     <div class="content">
       <h2 style="color:orange;">404</h2>
