--- a/legal.html
+++ b/legal.html
@@ -72,7 +72,7 @@
             <p><b>If we ever make changes to our policies, we will notify you as soon as possible.</b>
             <br><i>We will make updates via Scratch Discussion Forums, GitHub Updates, etc.</i></p>
             <br>
-            <p><b>If a data breach occurs in Meower, we will notify you as soon as possible.</b></p>
+            <p><b>All data is to be treated equally.</b></p>
             <br>
             <p><b>We don't guarantee the stability or functionality of Meower, and it may be terminated at any time without warning.</b></p>
             <br>
