--- a/assets/what???/index.html
+++ b/assets/what???/index.html
@@ -7,9 +7,8 @@
   <body> 
     <p>uhh wekcome ot meowerx.mit,edu.gov.com.org</p>
     <p><br>
-      <img src="//assets/what???/meowch.png"> </p>
-    <embed src="//assets/what???/Meower%20Is%20%28Not%29%20Dead%20%281%29.wav.mid" autostart="true"
-
+      <img src="/assets/what???/meowch.png"> </p>
+    <embed src="/assets/what???/Meower%20Is%20%28Not%29%20Dead%20%281%29.wav.mid" autostart="true"
       loop="true" height="0" width="2">
   </body>
 </html>
