Website minor revamp
Nobody was going to do this for a while so here I go

--- a/legal.html
+++ b/legal.html
@@ -8,21 +8,21 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="scratch" class="logo" href="/">meower <a id="scratch" class="link" href="/">home</a> <a id="scratch" class="link" href="https://app.meower.org">meower</a> <a id="scratch" class="link" href="https://wiki.meower.org">wikimeower</a> <a id="scratch" class="link" href="https://beta.meower.org">beta meower</a></div>
+    <div id="scratch" class="logo" href="/"><a id="scratch" href="/">Meower </a><a id="scratch" class="link" href="https://app.meower.org">launch</a> <a id="scratch" class="link" href="https://wiki.meower.org">wiki</a> <a id="scratch" class="link" href="https://beta.meower.org">beta</a> <a id="scratch" class="link" href="/legal.html">legal</a></div>
     <br>
     <div class="content" style="width:50%;margin-left:auto;margin-right:auto;text-align:center;">
-        <h2 style="color:orange;">Meower Terms of Use and Privacy Policy</h2>
+        <h2 style="color:#ff5600;">Meower Terms of Use and Privacy Policy</h2>
         <i>Last Revised: 1.7.2022</i>
         <br><br>
-        <h3 style="color:orange;">Important Notice</h3>
+        <h3 style="color:#ff5600;">Important Notice</h3>
         <p>Please note that this document isn't written by professional lawyers and may contain errors. Hereafter, “we”/“our”/“us” refers to Meower Media Co, and “you” refers to a user of Meower. We aren't lawyers and we don't have lawyers. Everything you see here is all-encompassing.</p>
         <br>
-        <h3 style="color:orange;">License</h3>
+        <h3 style="color:#ff5600;">License</h3>
         <p>The Meower Source Code is licensed under our own custom license: The MEOW license!<br>The MEOW license permits anyone and everyone to contribute to the source code very elegantly. It also protects the source code from patents, and also allows anyone to make their own version of the source for public or private use! Learn more about the MEOW license <a href="https://github.com/meower-media-co/Meower-Vanilla/blob/main/LICENSE">here.</a></p>
-        <h3 style="color:orange;">Meower Media Co.</h3>
+        <h3 style="color:#ff5600;">Meower Media Co.</h3>
         <p>Meower Media Co. isn't a legal entity, but merely an alias of Meower's collaborators.</p>
         <br>
-        <h3 style="color:orange;">Terms of Use</h3>
+        <h3 style="color:#ff5600;">Terms of Use</h3>
         <p>
             <p><b>You are required to do the following:</b>
             <br>a. Respect other individuals' rights and privacy
@@ -45,7 +45,7 @@
             <br>4. Being banned from any affiliates or direct partners of Meower Media Co.</p>
         </p>
         <br>
-        <h3 style="color:orange;">Privacy Policy / Our Policies</h3>
+        <h3 style="color:#ff5600;">Privacy Policy / Our Policies</h3>
         <p>
             <p><b>We don't collect any personally identifying information.</b>
             <br>a. This includes real names, dates of birth, gender info, geographic data, etc.
