--- a/discord.html
+++ b/discord.html
@@ -124,7 +124,7 @@
         </div>
         <div class="content" id="successDialog" style="display: none;">
             <h2 style="color:#ff5600;">Successfully Linked!</h2>
-            <div class="meower-info">Well done! YOu have successfully linked your Meower account to your Discord account.</div>
+            <div class="meower-info">Well done! You have successfully linked your Meower account to your Discord account.</div>
         </div>
     </body>
 </html>
