Make a script to sync everything with pages without hard working skills.

--- a/legal.html
+++ b/legal.html
@@ -6,9 +6,10 @@
     <title>meower</title>
     <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="header-text.js"></script>
   </head>
-  <body>
-    <div id="scratch" class="logo" href="/"><a id="scratch" href="/">Meower </a><a id="scratch" class="link" href="https://app.meower.org">launch</a> <a id="scratch" class="link" href="https://wiki.meower.org">wiki</a> <a id="scratch" class="link" href="https://beta.meower.org">beta</a> <a id="scratch" class="link" href="/legal.html">legal</a></div>
+  <body onload="applyHeader()">
+    <div id="header"></div>
     <br>
     <div class="content" style="width:50%;margin-left:auto;margin-right:auto;text-align:center;">
         <h2 style="color:#ff5600;">Meower Terms of Use and Privacy Policy</h2>
