--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="header-text.js"></script>	
   </head>
-  <body onload="applyHeader()">
+  <body>
     <div id="header"></div>
     <br>
     <div class="content">
