--- a/discord.html
+++ b/discord.html
@@ -6,9 +6,8 @@
         <title>meower | Discord</title>
         <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
         <link href="style.css" rel="stylesheet" type="text/css" />
-        <script src="header-text.js"></script>
     </head>
-    <body onload="applyHeader()">
+    <body>
         <script>
             class Cloudlink {
                 constructor(server) {
@@ -107,7 +106,7 @@
                 });
             }
         </script>
-        <div id="header"></div>
+        <div id="scratch" class="logo" href="/"><a id="scratch" href="/">Meower </a><a id="scratch" class="link" href="https://app.meower.org">launch</a> <a id="scratch" class="link" href="https://wiki.meower.org">wiki</a> <a id="scratch" class="link" href="https://beta.meower.org">beta</a> <a id="scratch" class="link" href="/legal.html">legal</a></div>
         <br>
         <div class="content" id="loginForm">
             <h2 style="color:#ff5600;">Link Meower account to your Discord account</h2>
