--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>meower</title>
     <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="header-text.js"></script>	
   </head>
   <body>
-    <div id="header"></div>
+    <div id="scratch" class="logo" href="/"><a id="scratch" href="/">Meower </a><a id="scratch" class="link" href="https://app.meower.org">launch</a> <a id="scratch" class="link" href="https://wiki.meower.org">wiki</a> <a id="scratch" class="link" href="https://beta.meower.org">beta</a> <a id="scratch" class="link" href="/legal.html">legal</a></div>
     <br>
     <div class="content">
 	  <img src="assets/logo.svg" width="25%" height="25%">
