--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="content">
 	  <img src="assets/logo.svg" width="25%" height="25%">
       <h2 style="color:#ff5600;">Welcome!</h2>
-      <div class="meower-info">Meower is a free, open-source, and nonprofit social media platform. Meower is also a (currently WIP) alternative to Twitter, Discord, and Reddit, completely free of advertising, tracking, data collection, and more. Wanna join Meower? <a id="scratch" class="link"  href="https://app.meower.org/">Click here to Launch Meower!</a></div>
+      <div class="meower-info"><a href="https://www.meower.org/Meower Information.html">Check out our Meower interactive information page!</a><br><br>Meower is a free, open-source, and nonprofit social media platform. Meower is also a (currently WIP) alternative to Twitter, Discord, and Reddit, completely free of advertising, tracking, data collection, and more. Wanna join Meower? <a id="scratch" class="link"  href="https://app.meower.org/">Click here to Launch Meower!</a></div>
 	  <h2 style="color:#ff5600;">A friendly place to be</h2>
       <div class="meower-info">Designed to be friendly for all ages, Meower has moderators and friends all-around. We're committed to keeping Meower a safe place to be.</div>
 	  <h2 style="color:#ff5600;">An original</h2>
