--- a/downloads.html
+++ b/downloads.html
@@ -107,23 +107,17 @@ filter: brightness(0%);
 		font-size: 14px;	
 		font-weight: 100;	
 		}
-		h4 {
-	 	font-family: simvoni;
-		color:gray;
-		font-size: 18px;	
-		font-weight: 100;	
-		}
 	</style>
 	
 </head>
 
 <body>
 	
-<header style="margin-top: -16px; margin-left: -8px; margin-right: -8px"><a href="https://meower.org"><img style="margin-left:10px;margin-top:10px;filter: brightness(0%)" height="50" src="https://meower.org/assets/logo.png"></a></div>
+<header style="margin-top: -16px; margin-left: -8px; margin-right: -8px"><img style="margin-left:10px;margin-top:10px;filter: brightness(0%)" height="50" src="https://meower.org/assets/logo.png"></div>
 			<ul style="float: right;">
 		<li ><nav><a href="https://app.meower.org">launch</a></nav></li>
 		<li ><nav> <a href="https://svelte.meower.org">svelte</a></nav></li>		
-		<li ><nav> <a href="https://meower.org/downloads">downloads</a></nav></li>
+		<li ><nav> <a href="https://meower.org/downloads"><span style="color: #F9A637">downloads</span></a></nav></li>
 		<li ><nav> <a href="https://meower.org/legal/">legal</a></nav></li>
 		<li ><nav> <a href="https://wiki.meower.org">wiki</a></nav></li>
 				
@@ -132,11 +126,10 @@ filter: brightness(0%);
 	
 
 		
-</header>
-<div class="container">
-<h1>404&nbsp; &nbsp; <h2><span style="color: #F9A637">The page you are looking for cannot be found...&nbsp; &nbsp;&nbsp;</h2></span>
-<h4><em>You could have:<br><br> - Typed the URL wrong <br>- Clicked on a link that no longer exists <br>- Made Meowy cry and now he's mad</em></h4>
-</button></a> <a href=https://github.com/meower-media-co/></a>
+</header><div class="container">
+<h1>Download&nbsp; &nbsp; <br><span style="color: #F9A637">Meower Desktop</span><h5><em>Last updated on June 5, 2022</em></h5>
+</button></a> <a href=https://github.com/meower-media-co/><button class="button2"><h2 style="float:left;">v&nbsp;</h2>
+		</button></a>
 	
 <div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div>
 </body>
