--- a/meower.html
+++ b/meower.html
@@ -2,15 +2,13 @@
 <!-- Hello there! This webpage was made by zedthehedgehog, a total html noob, so the code is pretty messy, enter at your own risk. -->
 <html>
 <head>
+	<link rel="shortcut icon" href="assets/77336943.png">
 <meta charset="utf-8">
 <title>meower</title>
 	<style>
 		.container {
 	width: 80%;
-	margin-left: 30px;
-	margin-right: 30px;
-	margin-top: 60px;		
-			
+	margin: 0 auto;
 }
 		header {
 			background: white;
@@ -62,26 +60,24 @@ nav a:hover {
 		.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
-		width: 110%;
+		padding: 0px 24px;
 		border: none;
 		font-family: simvoni;
 		font-size: 32; 	
 		color: #fff;
 	    margin-right: 15px;
 		}
-		.button2 {	
-		width: 120%;	
+		.button2 {
 		border-radius: 14px;
 		background-color: #E8F3FD;
-		padding: 0px 20px;
+		padding: 0px 40px;
 		border: none;
-		font-family: simvoni;; 	
+		font-family: simvoni;
+		font-size: 32; 	
 		color: #000;
-		m	
 		}
 			.img1 {
-	  
-filter: brightness(0%);
+  filter: brightness(0%);
   margin-left: 10px;
 	margin-top: 10px;		
 }
@@ -95,31 +91,24 @@ filter: brightness(0%);
 		margin-top 0;		
 	}
 		h1 {
-		margin-top:	60px;
 		font-family: Simvoni;
 		font-weight: 1000;	
-		font-size: 50px;
+		font-size: 60 px;
 		margin-top 0;	
 	}
 		h5 {
 	 	font-family: simvoni;
-		color:gray;
-		font-size: 14px;	
-		font-weight: 100;	
-		}
-		h4 {
-	 	font-family: simvoni;
-		color:gray;
-		font-size: 18px;	
-		font-weight: 100;	
+		letter-spacing: 5px;	
+		font-size: 14px;
+		margin-top 0;	
 		}
 	</style>
 	
 </head>
 
 <body>
-	
-<header style="margin-top: -16px; margin-left: -8px; margin-right: -8px"><a href="https://meower.org"><img style="margin-left:10px;margin-top:10px;filter: brightness(0%)" height="50" src="https://meower.org/assets/logo.png"></a></div>
+	<div class="container"></div>
+	<header style="margin-top: -16px; margin-left: -8px; margin-right: -8px"><a href="https://meower.org"><img style="margin-left:10px;margin-top:10px;filter: brightness(0%)" height="50" src="https://meower.org/assets/logo.png"></a></div>
 			<ul style="float: right;">
 		<li ><nav><a href="https://app.meower.org">launch</a></nav></li>
 		<li ><nav> <a href="https://svelte.meower.org">svelte</a></nav></li>		
@@ -133,11 +122,11 @@ filter: brightness(0%);
 
 		
 </header>
-<div class="container">
-<h1>404&nbsp; &nbsp; <h2><span style="color: #F9A637">The page you are looking for cannot be found...&nbsp; &nbsp;&nbsp;</h2></span>
-<h4><em>You could have:<br><br> - Typed the URL wrong <br>- Clicked on a link that no longer exists <br>- Made Meowy cry and now he's mad</em></h4>
-</button></a> <a href=https://github.com/meower-media-co/></a>
-	
-<div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div>
+<center><h5>THE MEOWER PROJECT</h5>
+		<h1>A <span style="color: #F9A637">state-of-the-art</span> social media platform for everyone</h1>
+		<a href="https://app.meower.org"><button class="button1"><h2>Launch Meower</h2></button></a> <a href=https://github.com/meower-media-co/><button class="button2"><h2>Learn More&nbsp;</h2>
+		</button></a>
+	</center>
+<div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudymeowy.png"></div></div>
 </body>
-</html></div>
+</html>
