--- a/b6/downloads.html
+++ b/b6/downloads.html
@@ -5,6 +5,10 @@
 <meta charset="utf-8">
 <title>meower</title>
 	<style>
+		@font-face {
+            font-family: simvoni;
+            src: url(https://meower.org/fonts/new-meower-fonts/Simvoni.ttf) format("truetype")
+        }
 		.container {
 	width: 80%;
 	margin-left: 30px;
