--- a/b6/index.html
+++ b/b6/index.html
@@ -127,8 +127,8 @@ nav a:hover {
 		
 </header>
 <center><h5>THE MEOWER PROJECT</h5>
-		<h1>A <span style="color: #F9A637">state-of-the-art</span> social media platform for everyone</h1>
-		<a href="https://app.meower.org"><button class="button1"><h2>Launch Meower</h2></button></a> <a href=https://github.com/meower-media-co/><button class="button2"><h2>Learn More&nbsp;</h2>
+		<h1>A <span style="color: #F9A637">state-of-the-art</span> social <br>media platform for everyone</h1>
+  <a href="https://app.meower.org"><button class="button1"><h2>Launch Meower</h2></button></a> <a href=https://github.com/meower-media-co/><button class="button2"><h2>Learn More&nbsp;</h2>
 		</button></a>
 	</center>
 <div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudymeowy.png"></div></div>
