--- a/b6/downloads.html
+++ b/b6/downloads.html
@@ -131,9 +131,12 @@ filter: brightness(0%);
 
 		
 </header><div class="container">
-<h1>Download&nbsp; &nbsp; <br><span style="color: #F9A637">Meower Desktop</span><h5><em>Last updated on June 5, 2022</em></h5>
-</button></a> <a href=https://github.com/meower-media-co/><button class="button2"><h2 style="float:left;">v&nbsp;</h2>
-		</button></a>
+<h1>Download&nbsp; &nbsp; <br><span style="color: #F9A637">Meower Desktop</span><h5><em>Last updated on Apri 20, 6969</em></h5>
+</button></a> <button class="button2"><h2 style="float:left;">v0.6.9&nbsp;</h2> <img height="20" style="float: left; margin-top: 16px;" src="https://meower.org/assets/releaseimage.png"><img height="40" style="float: right; margin-top: 7px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/github.png"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 23px;" src="https://meower.org/assets/linux.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/macos.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/windows.svg">
+		</button></a><br><br><button class="button2"><h2 style="float:left;">v0.4.21&nbsp;</h2> 
+		<img height="20" style="float: left; margin-top: 16px;" src="https://meower.org/assets/betaimage.png"><img height="40" style="float: right; margin-top: 7px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/github.png"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 23px;" src="https://meower.org/assets/linux.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/macos.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/windows.svg">
+		</button></a><br><br><button class="button2"><h2 style="float:left;">v0.4.20&nbsp;</h2> <img height="20" style="float: left; margin-top: 16px;" src="https://meower.org/assets/releaseimage.png"><img height="40" style="float: right; margin-top: 7px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/github.png"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 23px;" src="https://meower.org/assets/linux.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/macos.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/windows.svg">
+		</button></a><br><h5><em>You've reached the end of the list...</em></h5>
 	
 <div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div>
 </body>
