--- a/b6/404.html
+++ b/b6/404.html
@@ -3,7 +3,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>meower</title>
+<title>meower - 404</title>
+	<link rel="shortcut icon" href="https://meower.org/assets/77336943.png" type="image/x-icon">
 	<style>
 		@font-face {
             font-family: simvoni;
