--- a/b6/downloads.html
+++ b/b6/downloads.html
@@ -2,8 +2,9 @@
 <!-- Hello there! This webpage was made by zedthehedgehog, a total html noob, so the code is pretty messy, enter at your own risk. -->
 <html>
 <head>
+	<link rel="shortcut icon" href="https://meower.org/assets/77336943.png" type="image/x-icon">
 <meta charset="utf-8">
-<title>meower</title>
+<title>meower - downloads</title>
 	<style>
 		@font-face {
             font-family: simvoni;
