--- a/b6/404.html
+++ b/b6/404.html
@@ -140,7 +140,8 @@ filter: brightness(0%);
 </header>
 <div class="container">
 <h1>404&nbsp; &nbsp; <h2><span style="color: #F9A637">The page you are looking for cannot be found...&nbsp; &nbsp;&nbsp;</h2></span>
-<h4><em>You could have:<br><br> - Typed the URL wrong <br>- Clicked on a link that no longer exists <br>- Made Meowy cry and now he's mad</em></h4>
+<h4><em>You could have:<br><br> - Typed the URL wrong <br>- Clicked on a link that no longer exists <br>
+- Made Meowy cry and now he's mad<br><br>The one thing we know for sure is you can click the Meower logo to return home</em></h4>
 </button></a> <a href=https://github.com/meower-media-co/></a>
 	
 <div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div>
