--- a/b6/index.html
+++ b/b6/index.html
@@ -92,6 +92,13 @@ nav a:hover {
 		font-size: 32; 	
 		color: #fff;
 	    margin-right: 15px;
+		cursor: pointer;
+		transtiton-duration: 4s;
+		-webkit-transition:  -webkit-transform .2s ease-out;
+		-moz-transition:  -moz-transform .2s ease-out;
+		-o-transition:  -o-transform .2s ease-out;		
+		transition: transform .2s ease-out;
+		
 		}
 		.button2 {
 		border-radius: 14px;
@@ -101,6 +108,24 @@ nav a:hover {
 		font-family: simvoni;
 		font-size: 32; 	
 		color: #000;
+		cursor: pointer;
+		transtiton-duration: 4s;
+				-webkit-transition:  -webkit-transform .2s ease-out;
+		-moz-transition:  -moz-transform .2s ease-out;
+		-o-transition:  -o-transform .2s ease-out;		
+		transition: transform .2s ease-out;	
+		}
+		.button1:hover {
+		-webkit-transform:scale(1.1);
+		-moz-transform:scale(1.1);
+		-o-transform:scale(1.1);	
+		transform:scale(1.1);	
+		}
+				.button2:hover {
+		-webkit-transform:scale(1.1);
+		-moz-transform:scale(1.1);
+		-o-transform:scale(1.1);	
+		transform:scale(1.1);	
 		}
 			.img1 {
   filter: brightness(0%);
