--- a/b6/404.html
+++ b/b6/404.html
@@ -124,7 +124,7 @@ filter: brightness(0%);
 
 <body>
 	
-<header style="margin-top: -16px; margin-left: -8px; margin-right: -8px"><a href="https://meower.org"><img style="margin-left:10px;margin-top:10px;filter: brightness(0%)" height="50" src="https://meower.org/assets/logo.png"></a></div>
+<header style="margin-top: -16px; margin-left: -8px; margin-right: -8px"><a href="https://meower.org"><img style="margin-left:10px;margin-top:10px;filter: brightness(0%)" height="50" src="https://meower.org/assets/logo.png"></a>
 			<ul style="float: right;">
 		<li ><nav><a href="https://app.meower.org">launch</a></nav></li>
 		<li ><nav> <a href="https://svelte.meower.org">svelte</a></nav></li>		
@@ -139,11 +139,11 @@ filter: brightness(0%);
 		
 </header>
 <div class="container">
-<h1>404&nbsp; &nbsp; <h2><span style="color: #F9A637">The page you are looking for cannot be found...&nbsp; &nbsp;&nbsp;</h2></span>
+<h1>404&nbsp; &nbsp; <h2><span style="color: #F9A637">The page you are looking for cannot be found...&nbsp; &nbsp;&nbsp;</span></h2>
 <h4><em>You could have:<br><br> - Typed the URL wrong <br>- Clicked on a link that no longer exists <br>
 - Made Meowy cry and now he's mad<br><br>The one thing we know for sure is you can click the Meower logo to return home</em></h4>
-</button></a> <a href=https://github.com/meower-media-co/></a>
+<a href=https://github.com/meower-media-co/></a>
 	
 <div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div>
 </body>
-</html></div>
+</html>
