--- a/b6/legal.html
+++ b/b6/legal.html
@@ -114,11 +114,11 @@ filter: brightness(0%);
 
 <body>
 	
-<header style="margin-top: -16px; margin-left: -8px; margin-right: -8px"><a href="https://meower.org"><img style="margin-left:10px;margin-top:10px;filter: brightness(0%)" height="50" src="https://meower.org/assets/logo.png"></a></div>
+<header style="margin-top: -16px; margin-left: -8px; margin-right: -8px"><a href="https://meower.org"><img style="margin-left:10px;margin-top:10px;filter: brightness(0%)" height="50" src="https://meower.org/assets/logo.png"></a>
 			<ul style="float: right;">
 		<li ><nav><a href="https://app.meower.org">launch</a></nav></li>
 		<li ><nav> <a href="https://svelte.meower.org">svelte</a></nav></li>		
-		<li ><nav> <a href="https://meower.org/downloads">downloads</span></nav></li>
+		<li ><nav> <a href="https://meower.org/downloads">downloads</nav></li>
 		<li ><nav> <a href="https://meower.org/legal/"><span style="color: #F9A637;">legal</span></a></nav></li>
 		<li ><nav> <a href="https://wiki.meower.org">wiki</a></nav></li>
 				
@@ -130,7 +130,7 @@ filter: brightness(0%);
 </header><div class="container">
 <h1>Meower&nbsp; &nbsp; <br><span style="color: #F9A637">Terms of Use/Privacy Policy&nbsp; &nbsp;</span>
 <h5><em>Last Revised: 1/7/2022</em></h5>
-</button></a> <button class="button2"><h2 style="float:left;"><h2 style="color:#F9A637;">Meower Terms of Use and Privacy Policy</h2>
+</a> <button class="button2"><h2 style="float:left;"><h2 style="color:#F9A637;">Meower Terms of Use and Privacy Policy</h2>
 <h3 style="color:#F9A637;">Important Notice</h3>
 <p>Please note that this document isn't written by professional lawyers and may contain errors. Hereafter, “we”/“our”/“us” refers to Meower Media Co, and “you” refers to a user of Meower. We aren't lawyers and we don't have lawyers. Everything you see here is all-encompassing.</p>
 <br>
@@ -220,9 +220,9 @@ filter: brightness(0%);
 <br>e. We will not demand payment from a Meower user for any reason.
 <br>f. We are not responsible for the selling of any Meower-related item, you may buy or sell these items at your own risk.
  <br>g. We are not responsible if you have been defrauded by any person or website claiming to have any paid item or information relating to Meower.</p>
-<p></p></h2></left>
+<p></p></h2>
 		</button><br><br><br><br>
 	
 <div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div>
 </body>
-</html></div>
+</html>
